@@ -8,17 +8,21 @@ import java.nio.file.StandardOpenOption;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
+import java.util.stream.Collectors;
 
 public class LogsConfiguration {
     private static LogsConfiguration logging;
-    private static final DateTimeFormatter TIME_FORMATTER = DateTimeFormatter.ofPattern("HH:mm:ss, yyyy.MM.dd");
+    private static final DateTimeFormatter TIME_FORMATTER = DateTimeFormatter.ofPattern("HH:mm:ss, dd.MM.yyyy");
     private static final Path PATH_TO_DIRECTORY_LOG = Path.of("src/log");
-    private static final Path PATH_TO_LOG_FILE = Path.of(PATH_TO_DIRECTORY_LOG + "/log.txt");
+    private static final Path PATH_TO_LOG_FILE = PATH_TO_DIRECTORY_LOG.resolve("log.txt");
     private static int stringCount;
 
     public static LogsConfiguration getInstance() {
         synchronized (LogsConfiguration.class) {
-            return logging == null ? new LogsConfiguration() : logging;
+            if (logging == null) {
+                logging = new LogsConfiguration();
+            }
+            return logging;
         }
     }
 
@@ -27,8 +31,7 @@ public class LogsConfiguration {
 
         try (BufferedWriter fileWriter = Files.newBufferedWriter(PATH_TO_LOG_FILE, StandardOpenOption.APPEND)) {
             deleteLog();
-
-            fileWriter.write(String.format("%d - {%s} %s\n", stringCount, TIME_FORMATTER.format(LocalDateTime.now()), message));
+            fileWriter.write("%d - {%s} %s\n".formatted(stringCount, TIME_FORMATTER.format(LocalDateTime.now()), message));
         } catch (IOException exception) {
             exception.printStackTrace();
         }
@@ -40,8 +43,7 @@ public class LogsConfiguration {
 
             if (stringCount > 15000) {
                 stringCount = 1;
-
-                Files.newBufferedWriter((PATH_TO_LOG_FILE), StandardOpenOption.TRUNCATE_EXISTING);
+                Files.newBufferedWriter(PATH_TO_LOG_FILE, StandardOpenOption.TRUNCATE_EXISTING).close();
             }
         } catch (IOException exception) {
             exception.printStackTrace();
@@ -62,13 +64,11 @@ public class LogsConfiguration {
         }
     }
 
-    public static void writeExceptionStackTraceInLogFile(StackTraceElement[] stackTraceElements) {
-        writeLog("{" + TIME_FORMATTER.format(LocalDateTime.now()) + "} "
-                    + Arrays.stream(stackTraceElements).map(StackTraceElement::toString).toList()
-                    + "\n");
+    public static void writeExceptionStackTraceInLogFile(Exception e) {
+        String stackTrace = Arrays.stream(e.getStackTrace())
+                .map(StackTraceElement::toString)
+                .collect(Collectors.joining("\n"));
 
-        writeLog(String.format("{%s} %s\n",
-                TIME_FORMATTER.format(LocalDateTime.now()),
-                Arrays.stream(stackTraceElements).map(StackTraceElement::toString).toList()));
+        writeLog("Возникло исключение - %s! StackTrace ошибок:\n%s".formatted(e, stackTrace));
     }
 }
